<resources>
    <string name="app_name">Notes</string>
    <string name="createNewNoteButtonText">Create a new note</string>
    <string name="saveAndCloseButtonText">Save and Close</string>
    <string name="nothingSelected">Nothing selected</string>
    <string name="enterNoteTextHint">Enter note text</string>
    <string name="enterNoteTitleHint">Enter note title</string>
    <string name="removeMenuItem">Remove chosen note</string>
    <string name="about">about</string>
    <string name="search">Search</string>
    <string name="addMenuItem">Add a new note</string>
    <string name="aboutMenuItem">About</string>
    <string name="forwardMenuItem">Forward</string>
    <string name="sortingMenuItem">Sorting</string>
    <string name="sortNoneMenuItem">Sort none</string>
    <string name="sortByDateMenuItem">Sort by date</string>
    <string name="sortByNameMenuItem">Sort by name</string>
    <string name="notesMenuItem">Notes</string>
    <string name="settingsMenuItem">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sideMenuTitle">Notes APP</string>
    <string name="settingsFragmentTitle">There will be application settings</string>
    <string name="aboutFragmentText">About</string>
    <string name="userAvatarImageView">User Avatar</string>
    <string name="userLoginTextView">Vasya Pupkin</string>
    <string name="userMailView">vasya@somehost.com</string>
    <string name="logoutMenuItem">Logout</string>
    <string name="signInWithVKButtonText">SignIn With VK</string>
    <string name="pleaseAuthenticateMessage">Please authenticate</string>
    <string name="confirmDeleteMessage">Please, confirm deleting</string>
    <string name="attention">Attention</string>
    <string name="confirmButtonText">Confirm</string>
    <string name="declineButtonText">Decline</string>
    <string name="deletionCanceledMessage">Deletion canceled </string>
</resources>
