<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/enterNoteTitleHint"
        android:inputType="textShortMessage"
        android:textColor="@color/black"
        android:textSize="@dimen/dialogFragmentEditTextSize"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/editTitleCancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/declineButtonText"
            android:textSize="@dimen/dialogFragmentButtonTextSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/editTitleConfirmButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/confirmButtonText"
            android:textSize="@dimen/dialogFragmentButtonTextSize" />
    </LinearLayout>


</LinearLayout>